# mpc_ctrl_based_opt

./: .gitignore  README.md
mpc_ctrl/config/: controller_param.yaml  ctrl_param_real.yaml
mpc_ctrl/launch/: run_ctrl.launch  run_test_jpcm.launch  vicon.launch
mpc_ctrl/scripts/: controller_log.txt  fixed_point_and_circle_test.py  mpc_tracking_data.csv
mpc_ctrl/src/: PX4CtrlFSM.cpp  controller.cpp
mpc_ctrl/test/: test_jpcm.cpp
vicon2odom/: CMakeLists.txt  package.xml
vicon2odom/launch/: mocap_bridge.launch
vicon2odom/src/: vicon2odom.cpp
